--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-camera-roll-gallery": "^4.4.3",
     "react-native-elements": "^3.3.1",
     "react-native-fast-image": "^8.3.4",
+    "react-native-flash-message": "^0.1.23",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-interactive-image-gallery": "^0.1.2",
     "react-native-paper": "^4.7.2",
